# senac_ia_uc15_nlp_project

./: .gitignore  README.md  pyproject.toml
data/arthur/: gold_standard_arthur.md
data/illana/: gold_standard.md
data/marcelo/: gold_standard.md
data/pablo/: gold_standard.md  gold_standard_deprecated.md  gold_standart.md  sindilojas_2025_2026.txt
logs/: arthur_logs.md  illana_logs.md  marcelo_logs.md  pablo_logs.md
notebooks/: base_rnn_notebook..ipynb
notebooks/arthur/: uc15_faq_notebook1_arthur.ipynb  uc15_faq_notebook2_arthur.ipynb  uc15_faq_notebook3_arthur.ipynb  uc15_faq_notebook4_arthur.ipynb  uc15_faq_notebook5_arthur.ipynb  uc15_faq_notebook6_arthur.ipynb
notebooks/arthur/chroma_langchain_db_arthur_faq_2stage/: chroma.sqlite3
notebooks/examples/: 2_stage_ir_legacy.ipynb  2_stage_ir_nolegacy.ipynb
notebooks/illana/: base_pipeline.ipynb
notebooks/marcelo/: codigo_stage_ir_nolegacy_codigo.ipynb  trabalho_10032026.ipynb
notebooks/pablo/: base_retrieve_rerank_notebook.ipynb  base_rnn_notebook.ipynb  base_rnn_notebook_v2.ipynb  fine_tunning_test.ipynb  pt_mmarco_lora_example.ipynb  test_ir_pipeline.ipynb  two_stage_ir_pipeline.ipynb
notebooks/pablo/chroma_langchain_db/1ddcc1bf-351d-4b66-8874-36ee95a0d0ca/: index_metadata.pickle
notebooks/pablo/final_project/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  specs.md
notebooks/pablo/final_project/notebooks/: 01_ingest_and_index.ipynb  02_query_rag.ipynb
notebooks/pablo/meeting_transcription/: .env.example  app.py
(+32 files in other folders)
